welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:4: error: not a legal formal parameter
		rep = ( n <= 1 || n => 10 )
                               ^